--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@ header {
 	-webkit-background-size: cover;
 	text-align: center;
 	overflow: hidden;
-	background-color: #e9d5a1;
+	background-color: #F5CCCC;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -70,9 +70,9 @@ header .nav {
 	padding: 8px 15px 2px 15px;
 	position: relative;
 	z-index: -500;
-	border-top: 5px solid #696969;
+	border-top: 5px solid #6F6080;
 	border-radius: 0 0 5px 5px;
-	background-color: #696969;
+	background-color: #6F6080;
 	color: white;
 }
 
@@ -86,7 +86,7 @@ header .nav {
 
 .language {
 	font-size: 25px;
-	background-color: #e9d5a1;
+	background-color: #F5CCCC;
 	padding-bottom: 10px;
 	padding-top: 80px;
 }
@@ -102,11 +102,11 @@ header h1 {
 }
 
 .slider-image {
-	border: 5px solid #D7CAAA;
+	border: 5px solid #F7DEDE;
 }
 
 .slider-tab {
-	background-color: #D7CAAA;
+	background-color: #F7DEDE;
 	height: 25px;
 }
 
@@ -231,7 +231,7 @@ header h1 {
 }
 
 #resume {
-	background: #efe1bd;
+	background: #F7DEDE;
 }
 
 .experience-icon {
@@ -245,7 +245,7 @@ header h1 {
 	text-align: left !important;
 	padding: 5px 8px 5px 8px !important;
 	vertical-align: baseline;
-	background-color: #AE944F !important;
+	background-color: #6F6080 !important;
 	color: white;
 	font-weight: lighter !important;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -353,7 +353,7 @@ header h1 {
 }
 
 #portfolio {
-	background: #efe1bd;
+	background: #F7DEDE;
 	padding-bottom: 5%;
 }
 
@@ -389,7 +389,7 @@ header h1 {
 }
 
 #skills {
-	background: #1F1F1F;
+	background: #5B4F69;
 	min-height: 200px;
 	width: 100%;
 	overflow: hidden;
@@ -414,7 +414,7 @@ header h1 {
 }
 
 footer {
-	background: #1F1F1F;
+	background: #5B4F69;
 	min-height: 100px;
 	width: 100%;
 	overflow: hidden;
